--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
       "dom.iterable",
       "esnext"
     ],
+    "strictNullChecks": true,
+    "strictFunctionTypes": false, 
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
